backend/api/tests/integration/snapshots/integration__jig__clone.snap
---
source: tests/integration/jig.rs
expression: body

---
{
  "jig": {
    "id": "[id]",
    "display_name": "",
    "play_count": 0,
    "modules": [
      {
        "id": "[id]",
        "kind": "Cover"
      },
      {
        "id": "[id]",
        "kind": "Flashcards"
      },
      {
        "id": "[id]",
        "kind": "Memory"
      }
    ],
    "age_ranges": [],
    "affiliations": [],
    "goals": [],
    "creator_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "author_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "language": "en",
    "categories": [],
    "publish_at": null,
    "additional_resources": "[ids]",
    "description": "test description",
    "last_edited": "[last_edited]",
    "is_public": false,
    "default_player_settings": {
      "direction": "ltr",
      "display_score": false,
      "track_assessments": false,
      "drag_assist": false
    },
    "theme": "Blank",
    "audio_background": null,
    "audio_effects": {
      "feedback_positive": "[audio]",
      "feedback_negative": "[audio]"
    }
  }
}
