backend/api/tests/integration/snapshots/integration__jig__get.snap
---
source: tests/integration/jig.rs
expression: body

---
{
  "jig": {
    "id": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
    "display_name": "",
    "play_count": 0,
    "modules": [
      {
        "id": "0cbfdd82-7c83-11eb-9f77-d7d86264c3bc",
        "kind": "Cover"
      },
      {
        "id": "0cc03a02-7c83-11eb-9f77-f77f9ad65e9a",
        "kind": "Flashcards"
      },
      {
        "id": "5fac2632-cd4a-11eb-ae4e-7b9a797001a5",
        "kind": "Memory"
      }
    ],
    "age_ranges": [],
    "affiliations": [],
    "goals": [],
    "creator_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "author_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "language": "en",
    "categories": [],
    "publish_at": null,
    "additional_resources": [
      "41b8d0b4-aaff-4942-88ba-1a32fecdbd23",
      "7a227007-b957-4601-bf15-87a6b86da672"
    ],
    "description": "test description",
    "last_edited": "[last_edited]",
    "is_public": true,
    "default_player_settings": {
      "direction": "ltr",
      "display_score": false,
      "track_assessments": false,
      "drag_assist": false
    },
    "theme": "Blank",
    "audio_background": null,
    "audio_effects": {
      "feedback_positive": "[audio]",
      "feedback_negative": "[audio]"
    }
  }
}
